--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
                     <h1 class="text-2xl">Dev<span class="font-bold">Board</span></h1>
                 </div>
                 <div class="flex items-center gap-4">
-                    <img class="h-6 w-6" src="./assets/checkbox.png" alt="">
+                    <div class="flex gap-3">
+                        <img class="h-6 w-6" src="./assets/checkbox.png" alt="">
+                        <p class="font-bold">23</p>
+                    </div>
                     <img class="h-7 w-7" src="./assets/theme-btn.png" alt="">
                 </div>
             </nav>
@@ -42,7 +45,7 @@
                     </div>
 
                     <div class="flex items-center gap-3 pt-5 pb-6 pl-10 pr-20 bg-gradient-to-r from-blue-500 to-blue-200 rounded-lg w-96">
-                        <img src="./assets/calender.png" alt="">
+                        <img class="h-10 w-10" src="assets/board.png" alt="">
                         <div>
                             <h1 class="font-semibold text-xl">Discover Something <br>New Today!</h1>
                         </div>
